<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/kvizovi"
        android:icon="@android:drawable/btn_star_big_off"
        android:title="Kvizovi"/>
    <item
        android:id="@+id/predmeti"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="Predmeti"/>
    <item
        android:id="@+id/predajKviz"
        android:icon="@android:drawable/button_onoff_indicator_on"
        android:title="Predaj kviz" />
    <item
        android:id="@+id/zaustaviKviz"
        android:icon="@android:drawable/ic_delete"
        android:title="Zaustavi kviz" />
</menu>